# webclaw-software-manager

./: .gitignore  README.md  package-lock.json  package.json  preinstall-apps.json  preinstall-full-apps.json  software-manifest.json
.github/workflows/: release.yml
scripts/: check-qq-version.sh  hermes-install-wrapper.sh  install-ai-folder-organizer.sh  install-android-studio.sh  install-audacity.sh  install-cc-switch.sh  install-claude-code.sh  install-codex.sh  install-cursor.sh  install-dbeaver.sh  install-discord.sh  install-dockyard.sh  install-eclipse.sh  install-flameshot.sh  install-ghostty.sh  install-gimp.sh  install-hermes.sh  install-image-to-svg.sh  install-intellij.sh  install-ipshield.sh  install-obsidian.sh  install-opencode.sh  install-opentypeless.sh  install-pycharm.sh  install-qq.sh  install-sshield.sh  install-telegram.sh  install-trae.sh  install-vscode.sh  install-webclaw-calendar.sh  install-webclaw-launcher.sh  install-webclaw-software-manager.sh  install-webclaw-upgrader.sh  install-webclaw-video-creator.sh  install-webcode-ai-studio.sh  install-webcode-git-manager.sh  install-webcode-i18n-manager.sh  install-webcode-icon-manager.sh  install-webcode-release-tool.sh  install-wechat.sh  (+25 more)
src/: app.css  app.jsx  components.jsx  data.jsx  index.html  tweaks-panel.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: manifest.rs  mod.rs  platform.rs  software.rs  supervisor.rs
