[package]
name = "webclaw-software-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "webclaw_software_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
anyhow = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
